configuration des chats
