# src/app.js
@@ -1,4 +1,3 @@
-// Importation des dépendances nécessaires
 import express from 'express';
 import cors from 'cors';
 import path from 'path';
@@ -13,17 +12,15 @@ import routes from './routes/index.js';  // Importation du fichier index.js dans
 import jwt from 'jsonwebtoken';  // Importer jwt pour gérer l'authentification
 import { connectDB } from './config/database.js';  // Importer la fonction de connexion à la DB
 import morganMiddleware from './utils/logger/morgan.js';  // Importer ton middleware morgan personnalisé
-
+import swaggerUi from 'swagger-ui-express';
+import swaggerJsdoc from 'swagger-jsdoc';
 
 // Chargement des variables d'environnement
 dotenv.config();
 
-
-
 // Initialisation de l'application Express
 const app = express();
-const port = process.env.PORT || 3000;
-
+const port = process.env.PORT || 3001;
 
 // Connexion à la base de données MongoDB
 connectDB();  // Appeler la fonction connectDB pour établir la connexion
@@ -36,10 +33,22 @@ app.use(cookieParser());
 app.use(bodyParser.json());
 app.use(bodyParser.urlencoded({ extended: true }));
 app.use(express.json());
-// ou, si vous utilisez body-parser :
-// app.use(bodyParser.json());
+// Swagger options
+const swaggerOptions = {
+  definition: {
+    openapi: '3.0.0',
+    info: {
+      title: 'Jokkohealth API Documentation',
+      version: '1.0.0',
+      description: 'API documentation for managing appointments',
+    },
+  },
+  apis: ['./routes/**/*.js'], // Modifier pour inclure toutes les routes dans /routes
+};
 
-
+// Swagger Docs setup
+const swaggerSpec = swaggerJsdoc(swaggerOptions);
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 // Utilisation des routes
 app.use('/api', routes);  // Utiliser les routes définies dans `index.js`
 
@@ -49,119 +58,49 @@ app.use((err, req, res, next) => {
   res.status(500).json({ error: 'Something went wrong!' });
 });
 
-
 // Création du serveur HTTP
 const server = createServer(app);
 
 // Initialisation de Socket.IO
-const io = new Server(server);
-
-// --- Gestion des WebSockets avec Socket.IO ---
-let connectedUsers = [];
-
-io.on('connection', (socket) => {
-  console.log('Nouvelle connexion WebSocket:', socket.id);
-
-  // Gestion du pseudo
-  socket.on('pseudo', async (pseudo) => {
-    try {
-      let user = await User.findOne({ pseudo });
-      if (!user) {
-        user = new User({ pseudo });
-        await user.save();
-        socket.broadcast.emit('newUserInDb', pseudo);
-      }
-
-      _joinRoom(socket, 'salon1');
-      socket.pseudo = pseudo;
-      connectedUsers.push(socket);
-      socket.broadcast.to(socket.channel).emit('newUser', pseudo);
-    } catch (error) {
-      console.error('Erreur lors de la gestion du pseudo:', error);
-    }
-  });
-
-  // Chargement des anciens messages privés
-  socket.on('oldWhispers', async (pseudo) => {
-    try {
-      const messages = await Chat.find({ receiver: pseudo }).limit(3);
-      socket.emit('oldWhispers', messages);
-    } catch (error) {
-      console.error('Erreur lors de la récupération des anciens messages:', error);
-    }
-  });
-
-  // Changement de salon
-  socket.on('changeChannel', (channel) => {
-    _joinRoom(socket, channel);
-  });
-
-  // Envoi d'un message
-  socket.on('newMessage', async (message, receiver) => {
-    try {
-      if (receiver === 'all') {
-        const chat = new Chat({ _id_room: socket.channel, sender: socket.pseudo, receiver, content: message });
-        await chat.save();
-        socket.broadcast.to(socket.channel).emit('newMessageAll', { message, pseudo: socket.pseudo });
-      } else {
-        const user = await User.findOne({ pseudo: receiver });
-        if (user) {
-          const socketReceiver = connectedUsers.find(u => u.pseudo === user.pseudo);
-          if (socketReceiver) {
-            socketReceiver.emit('whisper', { sender: socket.pseudo, message });
-          }
-          const chat = new Chat({ sender: socket.pseudo, receiver, content: message });
-          await chat.save();
-        }
-      }
-    } catch (error) {
-      console.error('Erreur lors de l\'envoi du message:', error);
-    }
-  });
-
-  // Déconnexion d'un utilisateur
-  socket.on('disconnect', () => {
-    connectedUsers = connectedUsers.filter(u => u !== socket);
-    socket.broadcast.to(socket.channel).emit('quitUser', socket.pseudo);
-  });
-
-  // Événements de saisie
-  socket.on('writting', (pseudo) => {
-    socket.broadcast.to(socket.channel).emit('writting', pseudo);
-  });
-
-  socket.on('notWritting', (pseudo) => {
-    socket.broadcast.to(socket.channel).emit('notWritting', pseudo);
-  });
-
-  // Fonction pour rejoindre un salon
-  async function _joinRoom(socket, channel) {
-    let previousChannel = socket.channel || '';
-    socket.leaveAll();
-    socket.join(channel);
-    socket.channel = channel;
-
-    try {
-      let room = await Room.findOne({ name: channel });
-      if (!room) {
-        room = new Room({ name: channel });
-        await room.save();
-        socket.broadcast.emit('newChannel', channel);
-      }
-
-      const messages = await Chat.find({ _id_room: channel });
-      socket.emit('oldMessages', messages, socket.pseudo);
-
-      if (previousChannel) {
-        socket.emit('emitChannel', { previousChannel, newChannel: channel });
-      } else {
-        socket.emit('emitChannel', { newChannel: channel });
-      }
-    } catch (error) {
-      console.error('Erreur lors de la gestion du salon:', error);
-    }
-  }
+// Initialisation de Socket.IO
+const io = new Server(server, {
+  cors: {
+    origin: "http://localhost:3000", // Permettre l'accès depuis le client React
+  },
 });
+
+let activeUsers = [];
+
+// Gérer les connexions de Socket.IO
+io.on("connection", (socket) => {
+  // Ajouter un nouvel utilisateur lorsqu'il se connecte
+  socket.on("new-user-add", (newUserId) => {
+    if (!activeUsers.some((user) => user.userId === newUserId)) {
+      activeUsers.push({ userId: newUserId, socketId: socket.id });
+      console.log("New User Connected", activeUsers);
+    }
+    // Envoyer la liste des utilisateurs actifs à tous
+    io.emit("get-users", activeUsers);
+  });
+
+  // Lors de la déconnexion de l'utilisateur
+  socket.on("disconnect", () => {
+    activeUsers = activeUsers.filter((user) => user.socketId !== socket.id);
+    console.log("User Disconnected", activeUsers);
+    // Mettre à jour la liste des utilisateurs actifs
+    io.emit("get-users", activeUsers);
+  });
+
+  // Envoi d'un message à un utilisateur spécifique
+  socket.on("send-message", (data) => {
+    const { receiverId, senderId, text, chatId } = data;
+    const user = activeUsers.find((user) => user.userId === receiverId);
+    if (user) {
+      io.to(user.socketId).emit("receive-message", { senderId, text, chatId });
+    }
+  });
+});
+
 
 // Démarrage de l'application
 server.listen(port, () => {
