# src/routes/v1/message.routes.js
@@ -3,8 +3,58 @@ import { addMessage, getMessages } from '../../controllers/chats/MessageControll
 
 const router = express.Router();
 
+/**
+ * @swagger
+ * /messages:
+ *   post:
+ *     summary: Ajouter un message
+ *     description: Ajouter un nouveau message dans le chat
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               senderId:
+ *                 type: string
+ *                 example: '67b74745dea578a10872721e'
+ *               text:
+ *                 type: string
+ *                 example: 'Bonjour, comment ça va ?'
+ *               chatId:
+ *                 type: string
+ *                 example: '67b87ccd852422ff79dfaf32'
+ *     responses:
+ *       200:
+ *         description: Message ajouté avec succès
+ *       500:
+ *         description: Erreur lors de l'ajout du message
+ */
 router.post('/', addMessage);
 
+/**
+ * @swagger
+ * /messages/{chatId}:
+ *   get:
+ *     summary: Récupérer les messages d'un chat
+ *     description: Récupérer tous les messages associés à un chat spécifique
+ *     parameters:
+ *       - name: chatId
+ *         in: path
+ *         required: true
+ *         description: ID du chat pour lequel récupérer les messages
+ *         schema:
+ *           type: string
+ *           example: '67b87ccd852422ff79dfaf32'
+ *     responses:
+ *       200:
+ *         description: Liste des messages
+ *       404:
+ *         description: Chat non trouvé
+ *       500:
+ *         description: Erreur lors de la récupération des messages
+ */
 router.get('/:chatId', getMessages);
 
-export default router
+export default router;
